fix donor name/location spacing

--- a/src/assets/css/wp-conference-schedule-pro.css
+++ b/src/assets/css/wp-conference-schedule-pro.css
@@ -411,3 +411,7 @@ time .localtime:after {
 .wpcsp-donors .donor-location {
     font-size: .9em;
 }
+
+.wpcsp-donors span {
+    display: block;
+}
